# heart-risk-fastapi-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.run/: heart_risk_class.run.xml  heart_risk_classification.run.xml
app/: __init__.py  __main__.py  logging_config.py  main.py  metrics.py
app/static/: style.css
app/templates/: index.html  train.html
notebooks/: EDA.ipynb  EDA_s.ipynb  heart_risk_notebook.ipynb
src/: eda_analyzer.py  heart_job.py  heart_runner.py  inference_reporter.py  inference_utils.py  quick_view.py
submissions/: predictions.csv
tests/: test_health.py
